combine temperature and humidity forms into single form; change button types to button

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
       <div class="form-group">
         <label for="city">Enter your city: </label>
         <input type="text" class="form-control" id="city" placeholder="Portland, OR">
-        <button type="submit" name="button" id="get-temp">Get Temperature!</button>
+        <button type="button" name="temp-button" id="get-temp">Get Temperature!</button>
       </div>
-    </form>
-
-    <form id="humidity-form"><div class="form-group">
-      <button type="submit" name="button" id="get-humidity">Get Humidity!</button>
+      <div class="form-group">
+        <button type="button" name="humidity-button" id="get-humidity">Get Humidity!</button>
+      </div>
     </form>
 
   </body>
